<resources>
    <string name="app_name">Contact Tracker</string>

    <!-- Strings genéricos -->
    <string name="apply">Aplicar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="minutes">Minutos</string>
    <string name="seconds">Segundos</string>
    <string name="meters">Metros</string>
    <string name="lat">Latitud</string>
    <string name="lng">Longitud</string>
...
    <string name="labelStoppedService">Servicio de localización detenido.</string>
    <string name="locationTrackerTitle">Rastreo de Ubicación</string>
    <string name="labelStartStopTracker">Servicio para rastrear la ubicación</string>

    <!-- Títulos de las Tabs de la opción de menú de rastreo -->
    <string name="tabTracker">Rastreador</string>
    <string name="tabAlarms">Alarmas</string>
    <string name="tabMap">Mapa</string>

    <!-- Fragment de Información del rastreo de ubicación -->
    <string name="labelNoLocations">No hay localizaciones que mostrar.</string>


...
    <string name="history_date_picker_title">Selecciona una fecha</string>
    <string name="showInMap">Visualizar en el mapa</string>
    <string name="locations">localizaciones</string>
    <string name="deleteLocationsText">Se han eliminado %d localizaciones.</string>

    <!-- Alarmas de localización -->
    <string name="locationAlarmsTitle">Alarmas de localización</string>
    <string name="labelActivateAlarm">Programar rastreo automático</string>
    <string name="init">Inicio</string>
    <string name="end">Fin</string>
    <string name="program">Programar</string>
    <string name="noAlarm">No tienes alarmas programadas</string>
    <string name="newAlarm">Nueva alarma programada</string>
    <string name="errorInvalidHours">Las horas especificadas no son válidas</string>
    <string name="errorAlarmCollision">Ya existen alarmas programadas para ese rango de horas</string>
    <string name="labelCurrentAlarm">Alarma pendiente</string>
    <string name="placeholderStart">15:00</string>
    <string name="placeholderEnd">16:00</string>
    <string name="contentDescriptionBtnRemoveAlarm">Eliminar alarma de localización</string>
    <string name="contentDescriptionBtnAddAlarm">Añadir alarma de localización</string>
    <string name="addNewAlarmExplanation">Programa una alarma para iniciar y detener el rastreo de tu ubicación a una hora de inicio y de fin determinadas.</string>

    <!-- Fragment: Configuración del Tracker -->
    <string name="minIntervalHint">Intervalo de tiempo</string>
    <string name="minDisplacementHint">Desplazamiento mínimo</string>
    <string name="minIntervalNumberPickerTitle">Seleccionar intervalo mínimo</string>
    <string name="contentDescriptionDeleteLocationsByDate">Eliminar localizaciones por fecha</string>

    <!-- Fragment para Notificar POSITIVOS -->
    <string name="notifyAPositive">Notificar un positivo</string>
    <string name="genericErrorNotifyPositive">Ha habido un error al notificar el positivo. No ha sido posible subir las localizaciones a la nube.</string>
...

    <!-- Notificaciones: Servicio de rastreo de ubicación -->
    <string name="locationServiceTitle">Servicio de rastreo de ubicación</string>


    <!-- Menú de la barra de herramientas -->
    <string name="settings">Ajustes</string>

    <!-- Preference Titles -->
    <string name="tracker_header">Rastreo</string>
    <string name="risk_contact_header">Comprobación de contactos</string>
    <string name="notification_header">Notificaciones</string>

    <!-- Preferencias de Rastreo -->
    <string name="time_interval_title">Intervalo de tiempo</string>
    <string name="time_interval_description">Intervalo de tiempo mínimo transcurrido entre cada registro de localización.</string>
    <string name="min_displacement_title">Desplazamiento mínimo</string>
    <string name="min_displacement_description">Distancia mínima de diferencia entre localizaciones para que se registren las ubicaciones durante el rastreo.</string>

    <!-- Preferencias de Comprobación de Contactos -->
    <string name="check_scope_title">Alcance de la comprobación</string>
    <string name="check_scope_description">Número de días que se tienen en cuenta a la hora de comprobar los contactos de riesgo. Se comparan las localizaciones registradas en los anteriores días especificados.</string>

    <!-- Preferencias de notificaciones -->
    <string name="enable_positives_notifications_title">Notificaciones de positivos</string>
    <string name="positives_notifications_summary">Habilita el envío de notificaciones diarias acerca del número de positivos que se han notificado ese día.</string>

    <!-- Diálogo de preguntas de notificación de positivos -->
    <string name="question_asymptomatic">¿Has tenido síntomas de COVID-19?</string>
    <string name="answer_asymptomatic_1">Sí, he tenido síntomas.</string>
    <string name="answer_asymptomatic_2">No, soy asintomático.</string>
...
