...
    </fragment>

    <!-- Fragmentos del menú de opciones de la Toolbar -->
    <fragment
        android:id="@+id/settingsFragment"
        android:name="es.uniovi.eii.contacttracker.fragments.settings.SettingsFragment"
        android:label="Configuración"
        tools:layout="@layout/custom_preference_layout"/>


    <!-- Fragmento de Detalles de un Resultado de la comprobación de contactos de riesgo -->
    <fragment
        android:id="@+id/resultDetailsFragment"
...
