<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="du"
            type="es.uniovi.eii.contacttracker.util.DateUtils" />
        <variable
            name="viewModel"
            type="es.uniovi.eii.contacttracker.viewmodels.LocationAlarmsViewModel" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="5dp"
        app:strokeWidth="1dp"
        app:strokeColor="@color/grey1"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locationAlarmsTitle"
                android:textColor="@color/teal_700"
                android:textAppearance="?attr/textAppearanceHeadline6"
                app:drawableEndCompat="@drawable/ic_alarm"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/addNewAlarmExplanation"
                android:textAppearance="?attr/textAppearanceBody2"
                android:paddingTop="4dp"
                android:paddingBottom="6dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputLayoutStartAutoTracking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/init"
                        app:boxStrokeColor="@color/teal_200"
                        android:layout_marginEnd="8dp">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtStartAutoTracking"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@{du.formatDate(viewModel.starTime, "HH:mm")}'
                            android:editable="false"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/txtInputLayoutEndAutoTracking"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/end"
                        app:boxStrokeColor="@color/teal_200"
                        android:layout_marginEnd="6dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/txtEndAutoTracking"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text='@{du.formatDate(viewModel.endTime, "HH:mm")}'
                            android:editable="false"
                            android:maxLines="1" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <ImageButton
                        android:id="@+id/btnAddLocationAlarm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_add"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/addGreen"
                        android:contentDescription="@string/contentDescriptionBtnAddAlarm" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>