...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/layoutCardLocationAlarm"
                layout="@layout/card_location_alarm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                bind:viewModel="@{viewModel}"
                bind:du="@{du}"/>
...
                android:layout_margin="10dp" />

        </LinearLayout>

        <!-- Label de lista de alarmas vacía -->
        <TextView
            android:id="@+id/txtLabelNoAlarms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noAlarm"
            app:visibility="@{viewModel.noAlarms}"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
...
